<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prj3v2.csc214.prj3v2.LoginPageActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/emailTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/passwordTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submitButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitButtonClick"
        android:text="@string/login"/>

    <Button
        android:id="@+id/newAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="newAccountButtonClick"
        android:text="@string/new_account"/>

</LinearLayout>