<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prj3v2.csc214.prj3v2.ListUsersActivity"
    android:orientation="vertical">
'
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/usersPageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="usersPageButtonClick"
            android:text="@string/users_page"/>

        <Button
            android:id="@+id/feedPageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="feedButtonClick"
            android:text="@string/feed"/>

        <Button
            android:id="@+id/logoutPageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logoutButtonClick"
            android:text="@string/logout"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listOfUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>

</LinearLayout>
