<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prj3v2.csc214.prj3v2.UserProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/usersPageButtonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="usersPageButtonClick"
            android:text="@string/users_page"/>

        <Button
            android:id="@+id/feedPageButtonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="feedButtonClick"
            android:text="@string/feed"/>

        <Button
            android:id="@+id/logoutButtonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logoutButtonClick"
            android:text="@string/logout"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_profile"/>

        <TextView
            android:id="@+id/favoriteTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_if_favorite"/>

        <Button
            android:id="@+id/favoriteButtonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="favoriteButtonClick"/>

        <TextView
            android:id="@+id/nameTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/emailTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/homeTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/birthTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bioTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
